--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,5 +3,50 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 a {
-  color: #00b7ff;
+  text-decoration: none;
+  color: #333;
+}
+a:hover {
+  text-decoration: underline;
+  color: #000;
+}
+a:visit,
+a:active,
+a:link {
+  text-decoration: none;
+  color: #333;
+}
+h1 {
+  padding: 0;
+  margin: 0;
+}
+#groupList {
+  list-style: none;
+}
+#groupList>li {
+  border: solid 1px transparent;
+  cursor: pointer;
+}
+#groupList>li:hover {
+  border: solid 1px #808080;
+  background: #eee;
+}
+#beforeLogin,
+#afterLogin {
+  display: none;
+}
+#loadingDiv {
+  display: block;
+}
+.groupIcon {
+  width: 16px;
+  height: 16px;
+}
+.groupTitle {
+  font-weight: bold;
+  padding-left: 1em;
+}
+.groupDesc {
+  display: block;
+  padding-left: 2em;
 }
